--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
 	"manifest_version": 2,
-	"name": "LATDev",
-	"description": "This extension is for adding <p> tags in content production.",
+	"name": "Quick <p> tags",
+	"description": "Popup tool for adding <p> tags for content production.",
 	"version": "1.0",
 
 	"browser_action": {
 	  "default_icon" : "favicon.png",
-	  "default_popup": "latdev.html"
+	  "default_popup": "quicktags.html"
 
 	}
 }
