--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
 	"browser_action": {
 	  "default_icon" : "favicon.png",
-	  "default_popup": "quicktags.html"
+	  "default_popup": "quicktag.html"
 
 	}
 }
